# iotsaDataLogger

./: .gitignore  dataStore.h  dataStoreFile.cpp  dataStoreFile.h  dataStoreMemory.cpp  dataStoreMemory.h  iotsaDataLogger.cpp  iotsaDataLogger.h  iotsaDataLogger.ino  platformio.ini  readme.md
.github/workflows/: build-arduino.yml  build-platformio.yml
extras/hardware/: ESP32-Pico-D4.fzpz  RTC_DS1302_module.fzpz  dataLogger.fzz
extras/python/: pyproject.toml  requirements.txt  requirements_dev.txt
extras/python/iotsaDataLogger/: __main__.py  data_logger.py
extras/sandbox/: accugroot-2026-06-13.csv  accugroot-april24.csv  accugroot-aug25.csv  accugroot-jan26.csv  accugroot-jul23.csv  accugroot-jul24.csv  accugroot-maart22.json  accugroot-maart25.csv  accugroot-mar26.csv  accugroot-may26.csv  accugroot-oct23.csv  accugroot-sep25.csv  accugroot-september24.csv  accugroot.csv  accuklein-2026-06-06.csv  accuklein-2026-06-13.csv  accuklein-april24.csv  accuklein-aug25.csv  accuklein-jan26.csv  accuklein-jul23.csv  accuklein-jul24.csv  accuklein-maart22.txt  accuklein-maart25.csv  accuklein-mar26.csv  accuklein-may26.csv  accuklein-oct23.csv  accuklein-september24.csv  accuklein.csv  unknown-jun23.csv
python/iotsaDataLogger/: data_logger.py
