[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "iotsaDataLogger"
version = "0.1.0"
description = "Retrieve and graph data from an iotsaDataLogger device"
authors = [
    {name = "Jack Jansen", email = "Jack.Jansen@cwi.nl"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "iotsa",
    "matplotlib",
    "pandas",
]

[project.scripts]
iotsaDataLogger = "iotsaDataLogger.__main__:main"
